tests/rosetta/out/Java/base64-decode-data.error
javac error: exit status 1
/tmp/TestMochiToJavabase64-decode-data4252592493/001/Base64DecodeData.java:25: error: not a statement
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        ^
/tmp/TestMochiToJavabase64-decode-data4252592493/001/Base64DecodeData.java:25: error: ';' expected
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                ^
/tmp/TestMochiToJavabase64-decode-data4252592493/001/Base64DecodeData.java:25: error: <identifier> expected
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                               ^
/tmp/TestMochiToJavabase64-decode-data4252592493/001/Base64DecodeData.java:25: error: '(' or '[' expected
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                                ^
4 errors
